# zero-trust-verification

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json
plugins/codebase-health/: CHANGELOG.md  pyproject.toml
plugins/codebase-health/agents/: architecture-reviewer.md  incomplete-logic-detector.md
plugins/codebase-health/commands/: architecture.md  diagnose-bug.md  health-loop.md  remediate.md
plugins/codebase-health/hooks/: hooks.json
plugins/codebase-health/skills/cleanup-audit/: loop.config.yaml  remediation.config.yaml
plugins/spec-gen/: CHANGELOG.md  README.md  pyproject.toml
plugins/spec-gen/.claude-plugin/: plugin.json
plugins/spec-gen/commands/: spec.md
plugins/spec-gen/scripts/: emission_check.py  id_alloc.py  lint_consistency.sh  profile_resolve.py  resume_projection.py  self_test.sh
plugins/spec-gen/skills/spec/: SKILL.md
plugins/spec-gen/tests/: run_cases.py
plugins/zero-trust/: .mcp.json  LICENSE  README.md  pyproject.toml  triage.config.yaml
plugins/zero-trust/.claude-plugin/: plugin.json
plugins/zero-trust/agents/: architecture-reviewer.md  dead-code-cleanup.md  incomplete-logic-detector.md  journey-walker.md  performance-analyzer.md  security-auditor.md  test-health-auditor.md
plugins/zero-trust/commands/: architecture.md  audit.md  dead-code.md  diagnose-bug.md  health-audit.md  health-loop.md  incomplete-logic.md  marshal-pass.md  marshal-staleness.md  remediate.md  spec.md  triage.md  verify.md
plugins/zero-trust/config/: repos.example.json
plugins/zero-trust/docs/: CHANGELOG-v1.md
plugins/zero-trust/docs/autopilot/: CHANGELOG-v2.md
plugins/zero-trust/docs/codebase-health/: CHANGELOG.md  README.md
plugins/zero-trust/docs/marshal/: CHANGELOG.md  README.md
plugins/zero-trust/docs/org-memory/: CHANGELOG.md  README.md
plugins/zero-trust/docs/spec-gen/: CHANGELOG.md  README.md
plugins/zero-trust/docs/triage/: CHANGELOG.md  README.md
plugins/zero-trust/fixtures/cloudwatch/: incident.json
plugins/zero-trust/mcp/: mcp_server.py
plugins/zero-trust/references/: backends.md  escalation-criterion.md  host-contract.md  marshal-loop.md  operations.md  outcome-measurement.md  telemetry-contract.md
plugins/zero-trust/scripts/: _owm_run.sh  _py_run.sh  _triage_run.sh  correlate.py  emission_check.py  emit_incident_spec.py  extract_memory.sh  host_repo_list.sh  id_alloc.py  index_build.sh  lint_consistency.sh  lint_spec_gen.sh  loop_guard.py  marshal.sh  mock_host.py  mock_host.sh  outcome_annotate.sh  outcome_capture.sh  outcome_digest.sh  outcome_external.sh  outcome_store.py  outcome_store.sh  owm.py  profile_resolve.py  profile_resume.sh  query.sh  resume_handoff.sh  resume_projection.py  self_test_marshal.sh  self_test_org_memory.sh  self_test_spec_gen.sh  self_test_triage.sh  telemetry.sh  validate_manifest.py  validate_manifest.sh
plugins/zero-trust/tests/: run_cases.py  run_spec_gen_cases.py
(+425 files in other folders)
