[project]
name = "spec-gen"
version = "0.1.0"
description = "Spec Generation tier — deterministic substrate (vendored manifest validator + ID allocator, resume projection, profile resolution, emission-shape gate; ADR 0015)"
requires-python = ">=3.10"
# Same runtime deps as the repo-root validator: this plugin VENDORS
# scripts/validate_manifest.{sh,py} + schema byte-identical (SG-3), so the
# vendored `validate_manifest.sh` (which runs `uv run --project <plugin-root>`)
# resolves the same ruamel.yaml YAML-1.2 core parser (ADR 0014 Norway guard)
# and jsonschema. PyYAML (1.1) must never be used.
dependencies = [
    "ruamel.yaml>=0.18",
    "jsonschema>=4.20",
]

[tool.uv]
package = false
