[project]
name = "zero-trust"
version = "2.1.0rc1"
description = "Zero-Trust Verification plugin — deterministic Python substrate (canonical manifest validator + ID allocator, resume projection, emission-shape gate, triage correlators, OWM engine; ADR 0015/0025)"
requires-python = ">=3.10"
# Runtime deps of the CANONICAL manifest validator (scripts/validate_manifest.py,
# the suite's single copy per ADR 0025): `validate_manifest.sh` runs
# `uv run --project <plugin-root>` and resolves the ruamel.yaml YAML-1.2 core
# parser (ADR 0014 Norway guard) and jsonschema here. PyYAML (1.1) must never
# be used. The cleanup-audit skill's own Python remains stdlib-only; its
# py_run.sh pins --project to this same plugin root.
dependencies = [
    "ruamel.yaml>=0.18",
    "jsonschema>=4.20",
]

[tool.uv]
package = false
